# POSEIDON

./: README.md  pyproject.toml  tox.ini
poseidon/numpy/: __init__.py
poseidon/numpy/p3p/: __init__.py  p3p.py
poseidon/numpy/utils/: __init__.py  before_p3p.py  camera.py  initialize_camera_parameters.py  new_before_p3p.py  points.py
poseidon/torch/: __init__.py
poseidon/torch/p3p/: __init__.py  p3p.py
poseidon/torch/utils/: __init__.py  before_p3p.py  camera.py  intialize_camera_parameters.py  new_before_p3p.py
tests/: test_P3P_batch.py  test_P3P_numpy.py  test_P3P_torch.py
tutorials/: Tutorial_1_P3P.ipynb  Tutorial_2_P3P_LARD.ipynb  Tutorial_2_P3P_LARD_copy.ipynb  runway_points.json  test.py
tutorials/data/: extract_labeling_Bing.csv  runway_points.json
